[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://dani_sandbox/scripts/battle/BattleCard_a.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/cards_ilustrations/ilustration_placeholder.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/cards_marks/mark_placeholder.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 1 )

[node name="BattleCardBase" type="MarginContainer"]
margin_right = 80.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bars" type="VBoxContainer" parent="."]
show_behind_parent = true
margin_right = 80.0
margin_bottom = 120.0
rect_min_size = Vector2( 80, 120 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/separation = 0

[node name="Mark" type="Sprite" parent="Bars"]
show_behind_parent = true
position = Vector2( 40, 60 )
z_as_relative = false
texture = ExtResource( 4 )

[node name="Ilustration" type="Sprite" parent="Bars"]
show_behind_parent = true
position = Vector2( 40, 40 )
texture = ExtResource( 3 )

[node name="MarginContainer2" type="MarginContainer" parent="Bars"]
margin_right = 80.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="Colums" type="HBoxContainer" parent="Bars"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 10 )
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Bars/Colums"]
margin_right = 5.0
margin_bottom = 14.0
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="Cost" type="MarginContainer" parent="Bars/Colums"]
margin_left = 5.0
margin_right = 15.0
margin_bottom = 14.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Bars/Colums/Cost"]
margin_right = 10.0
margin_bottom = 14.0
mouse_default_cursor_shape = 2

[node name="Barckground" type="TextureRect" parent="Bars/Colums/Cost/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Bars/Colums/Cost/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Name" type="MarginContainer" parent="Bars/Colums"]
margin_left = 15.0
margin_right = 65.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="Name" type="Label" parent="Bars/Colums/Name"]
margin_right = 50.0
margin_bottom = 14.0
mouse_default_cursor_shape = 2
text = "Espada"
align = 1
valign = 1

[node name="Dexterity" type="MarginContainer" parent="Bars/Colums"]
margin_left = 65.0
margin_right = 75.0
margin_bottom = 14.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="Bars/Colums/Dexterity"]
margin_right = 10.0
margin_bottom = 14.0
mouse_default_cursor_shape = 2

[node name="Barckground" type="TextureRect" parent="Bars/Colums/Dexterity/NinePatchRect2"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Bars/Colums/Dexterity/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MarginContainer3" type="MarginContainer" parent="Bars"]
margin_top = 19.0
margin_right = 80.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="Description" type="MarginContainer" parent="Bars"]
margin_top = 69.0
margin_right = 80.0
margin_bottom = 109.0
rect_min_size = Vector2( 5, 40 )
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Description" type="RichTextLabel" parent="Bars/Description"]
margin_left = 10.0
margin_right = 70.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_fonts/normal_font = SubResource( 1 )
tab_size = 1
text = "Soy una carta super poderosa.
WAAAA"
[connection signal="mouse_entered" from="." to="." method="_on_BattleCardBase_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BattleCardBase_mouse_exited"]
